# GPSKet

./: .gitignore  README.md  pyproject.toml  setup.py
GPSKet/: __init__.py
GPSKet/datasets/: __init__.py  h2o.py
GPSKet/driver/: VMC_SRRMSProp.py  __init__.py  abstract_state_fitting.py  autoreg_state_fitting.py  minSR.py
GPSKet/hilbert/: __init__.py  discrete_fermion.py
GPSKet/models/: __init__.py  asymm_qGPS.py  autoreg_plaquetteqGPS.py  autoreg_qGPS.py  autoreg_qGPS_full.py  backflow.py  backflow_jastrow.py  cpd_backflow.py  jastrow.py  pfaffian.py  pixelcnn.py  plaquetteqGPS.py  qGPS.py  segmented_qGPS.py  slater.py  slater_jastrow.py  slater_qGPS.py
GPSKet/nn/: __init__.py  causal_conv.py  initializers.py
GPSKet/operator/: __init__.py  asep.py  fermion.py
GPSKet/optimizer/: __init__.py  solvers.py  sr_dense.py  sr_rmsprop.py
GPSKet/sampler/: __init__.py  autoreg.py  fermionic_hopping.py  metropolis_fast.py
GPSKet/supervised/: imag_time_step.py  supervised_qgps.py
GPSKet/vqs/: __init__.py
qGPSKet/: __init__.py
qGPSKet/datasets/: __init__.py  h2o.py
qGPSKet/driver/: __init__.py  abstract_state_fitting.py  autoreg_state_fitting.py
qGPSKet/hilbert/: __init__.py  discrete_asep.py  discrete_fermion.py
qGPSKet/models/: __init__.py  asymm_qGPS.py  autoreg_plaquetteqGPS.py  autoreg_qGPS.py  autoreg_qGPS_full.py  autoreg_qGPS_fully_var.py  backflow.py  backflow_jastrow.py  jastrow.py  pfaffian.py  plaquetteqGPS.py  qGPS.py  slater.py  slater_jastrow.py
qGPSKet/nn/: __init__.py  initializers.py  (+1 more)
tests/: test_ardirectsampler.py  test_arplaquetteqgps.py  test_arqgps.py  test_arqgpsfull.py  test_asymmqgps.py  test_autoreg.py  test_slater.py  test_vmcsrrmsprop.py
tutorials/: abinitio_example.py  asep_example.py  autoreg_state_fitting_example.py  hubbard_example.py  j1j2_example.py
(+82 files in other folders)
